[package]
name = "refptr"
version = "0.2.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"

description = "Inherently reference counted structs"
repository = "https://github.com/mystor/refptr"
readme = "README.md"
license = "MIT"
keywords = ["refcounted", "arc", "rc", "sync", "data-structure"]
categories = ["concurrency", "data-structures", "no-std"]

[features]
default = ["atomic"]
atomic = []

[workspace]
members = ["macros"]

[dependencies]
refptr-macros = { version = "0.2.0", path = "macros" }
