[package]
name = "refptr-macros"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"

description = "Procedural macros for the 'refptr' crate"
repository = "https://github.com/mystor/refptr"
license = "MIT"
keywords = ["macros", "refcounted", "arc", "rc", "sync", "data-structure"]

include = ["src/**/*", "Cargo.toml", "README.md"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
