[package]
name = "refptr-macros"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"

description = "Procedural macros for the 'refptr' crate"
repository = "https://github.com/mystor/refptr"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
